--- a/index.html
+++ b/index.html
@@ -7,36 +7,20 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
 <style>
-body{
-  margin:0;
-  font-family:Arial,Helvetica,sans-serif;
-  background:url("https://images.unsplash.com/photo-1503951914875-452162b0f3f1");
-  background-size:cover;
-  background-position:center;
-}
-.overlay{background:rgba(0,0,0,.65);min-height:100vh;}
-.menu{
-  position:fixed;left:0;top:0;bottom:0;width:70px;
-  background:rgba(0,0,0,.35);
-  display:flex;flex-direction:column;align-items:center;padding-top:20px;
-}
-.menu button{
-  background:none;border:none;color:#f1c40f;font-size:22px;
-  margin:15px 0;cursor:pointer;
-}
-.content{margin-left:90px;padding:20px;color:#fff;}
+body{margin:0;font-family:Arial;background:#111;color:#fff}
+.menu{position:fixed;left:0;top:0;bottom:0;width:70px;background:#0008;display:flex;flex-direction:column;align-items:center;padding-top:20px}
+.menu button{background:none;border:none;color:#f1c40f;font-size:22px;margin:15px 0;cursor:pointer}
+.content{margin-left:90px;padding:20px}
 .section{display:none}
 .section.active{display:block}
-input,select,button{padding:8px;border-radius:6px;border:none;margin:4px 0}
+input,select,button{padding:8px;border-radius:6px;border:none;margin:4px}
 button{cursor:pointer;font-weight:bold}
-table{width:100%;border-collapse:collapse}
-th,td{border-bottom:1px solid rgba(255,255,255,.2);padding:6px}
-.total{font-size:22px;color:#2ecc71}
+ul li{margin:6px 0}
+.small{font-size:12px;color:#aaa}
 </style>
 </head>
 
 <body>
-<div class="overlay">
 
 <div class="menu">
   <button onclick="show('pdv')">💈</button>
@@ -44,61 +28,31 @@ th,td{border-bottom:1px solid rgba(255,255,255,.2);padding:6px}
   <button onclick="show('clientes')">👤</button>
   <button onclick="show('planos')">💳</button>
   <button onclick="show('produtos')">📦</button>
-  <button onclick="show('despesas')">🧾</button>
-  <button onclick="show('financeiro')">📊</button>
 </div>
 
 <div class="content">
 
-<!-- PDV -->
-<div id="pdv" class="section active">
-  <h2>PDV / Caixa</h2>
-  <p id="statusCaixa"></p>
-
-  <select id="cliente"></select>
-  <select id="produto"></select>
-  <button onclick="addItem()">Adicionar</button>
-
-  <table id="carrinho"></table>
-  <p class="total">Total: R$ <span id="total">0.00</span></p>
-
-  <button onclick="finalizarVenda()">Finalizar Venda</button>
-  <button onclick="abrirCaixa()">Abrir Caixa</button>
-  <button onclick="fecharCaixa()">Fechar Caixa</button>
-</div>
-
-<!-- AGENDA -->
-<div id="agenda" class="section">
-  <h2>Agendamento</h2>
-  <input type="date" id="dataAgenda">
-  <select id="horaAgenda"></select>
-  <select id="clienteAgenda"></select>
-  <select id="servicoAgenda"></select>
-  <button onclick="salvarAgendamento()">Agendar</button>
-  <ul id="listaAgenda"></ul>
-</div>
-
 <!-- CLIENTES -->
-<div id="clientes" class="section">
+<div id="clientes" class="section active">
   <h2>Clientes</h2>
   <input id="nomeCliente" placeholder="Nome">
   <select id="planoCliente"></select>
-  <button onclick="salvarCliente()">Salvar</button>
+  <button onclick="salvarCliente()">💾 Salvar</button>
   <ul id="listaClientes"></ul>
 </div>
 
 <!-- PLANOS -->
 <div id="planos" class="section">
   <h2>Planos</h2>
-  <input id="nomePlano" placeholder="Nome do plano">
+  <input id="nomePlano" placeholder="Nome">
   <input id="valorPlano" type="number" placeholder="Valor">
-  <input id="qtdPlano" type="number" placeholder="Qtd serviços">
+  <input id="qtdPlano" type="number" placeholder="Qtd">
   <select id="tipoPlano"></select>
-  <button onclick="salvarPlano()">Salvar Plano</button>
+  <button onclick="salvarPlano()">💾 Salvar</button>
   <ul id="listaPlanos"></ul>
 </div>
 
-<!-- PRODUTOS -->
+<!-- PRODUTOS / SERVIÇOS -->
 <div id="produtos" class="section">
   <h2>Produtos / Serviços</h2>
   <input id="nomeProd" placeholder="Nome">
@@ -107,228 +61,121 @@ th,td{border-bottom:1px solid rgba(255,255,255,.2);padding:6px}
     <option value="produto">Produto</option>
     <option value="servico">Serviço</option>
   </select>
-  <button onclick="salvarProduto()">Salvar</button>
+  <button onclick="salvarProduto()">💾 Salvar</button>
   <ul id="listaProdutos"></ul>
 </div>
 
-<!-- DESPESAS -->
-<div id="despesas" class="section">
-  <h2>Despesas</h2>
-  <input id="descDespesa" placeholder="Descrição">
-  <input id="valorDespesa" type="number" placeholder="Valor">
-  <button onclick="salvarDespesa()">Salvar</button>
-  <ul id="listaDespesas"></ul>
-</div>
-
-<!-- FINANCEIRO -->
-<div id="financeiro" class="section">
-  <h2>Financeiro</h2>
-  <p>Faturamento: R$ <span id="fat">0.00</span></p>
-  <p>Despesas: R$ <span id="desp">0.00</span></p>
-  <p class="total">Lucro: R$ <span id="lucro">0.00</span></p>
-</div>
-
-</div>
 </div>
 
 <script>
-// ===== DB =====
-const rawDB = JSON.parse(localStorage.getItem("db") || "{}");
+const raw = JSON.parse(localStorage.getItem("db")||"{}");
 const db = {
-  clientes: rawDB.clientes || [],
-  planos: rawDB.planos || [],
-  produtos: rawDB.produtos || [],
-  vendas: rawDB.vendas || [],
-  despesas: rawDB.despesas || [],
-  agenda: rawDB.agenda || [],
-  caixa: rawDB.caixa || { aberto:false }
+  clientes: raw.clientes||[],
+  planos: raw.planos||[],
+  produtos: raw.produtos||[]
 };
 
-let carrinho=[];
+let editCliente=null, editPlano=null, editProduto=null;
 
-function save(){ localStorage.setItem("db", JSON.stringify(db)); }
-
+function save(){localStorage.setItem("db",JSON.stringify(db))}
 function show(id){
   document.querySelectorAll(".section").forEach(s=>s.classList.remove("active"));
   document.getElementById(id).classList.add("active");
   render();
 }
 
-// ===== HORÁRIOS =====
-function gerarHorarios(){
-  let h=[];
-  for(let i=8;i<=20;i++){
-    h.push(`${String(i).padStart(2,"0")}:00`);
-    h.push(`${String(i).padStart(2,"0")}:30`);
-  }
-  return h;
-}
-
-// ===== RENDER =====
 function render(){
-  statusCaixa.innerText = db.caixa.aberto ? "🟢 Caixa aberto" : "🔴 Caixa fechado";
-
-  cliente.innerHTML = db.clientes.map(c=>`<option>${c.nome}</option>`).join("");
-  produto.innerHTML = db.produtos.map(p=>`<option>${p.nome}|${p.valor}|${p.tipo}</option>`).join("");
-
-  planoCliente.innerHTML = `<option value="">Sem plano</option>` +
+  planoCliente.innerHTML = `<option value="">Sem plano</option>`+
     db.planos.map(p=>`<option>${p.nome}</option>`).join("");
 
-  tipoPlano.innerHTML = db.produtos
-    .filter(p=>p.tipo==="servico")
-    .map(p=>`<option value="${p.nome}">${p.nome}</option>`).join("");
-
-  listaClientes.innerHTML = db.clientes.map(c =>
-    `<li>${c.nome} | Plano: ${c.plano||"-"} | Saldo: ${c.saldo||0}</li>`
-  ).join("");
-
-  listaPlanos.innerHTML = db.planos.map(p =>
-    `<li>${p.nome} | ${p.qtd}x ${p.tipo}</li>`
-  ).join("");
-
-  listaProdutos.innerHTML = db.produtos.map(p =>
-    `<li>${p.nome} (${p.tipo})</li>`
-  ).join("");
-
-  horaAgenda.innerHTML = gerarHorarios().map(h=>`<option>${h}</option>`).join("");
-  clienteAgenda.innerHTML = cliente.innerHTML;
-  servicoAgenda.innerHTML = db.produtos.filter(p=>p.tipo==="servico")
+  tipoPlano.innerHTML = db.produtos.filter(p=>p.tipo==="servico")
     .map(p=>`<option>${p.nome}</option>`).join("");
 
-  carrinhoRender();
-  financeiroRender();
-  renderAgenda();
+  listaClientes.innerHTML = db.clientes.map((c,i)=>`
+    <li>${c.nome} | Plano: ${c.plano||"-"}
+      <button onclick="editarCliente(${i})">✏️</button>
+      <button onclick="excluirCliente(${i})">🗑️</button>
+    </li>`).join("");
+
+  listaPlanos.innerHTML = db.planos.map((p,i)=>`
+    <li>${p.nome} (${p.qtd}x ${p.tipo})
+      <button onclick="editarPlano(${i})">✏️</button>
+      <button onclick="excluirPlano(${i})">🗑️</button>
+    </li>`).join("");
+
+  listaProdutos.innerHTML = db.produtos.map((p,i)=>`
+    <li>${p.nome} (${p.tipo})
+      <button onclick="editarProduto(${i})">✏️</button>
+      <button onclick="excluirProduto(${i})">🗑️</button>
+    </li>`).join("");
 }
 
-// ===== PDV (BLOQUEIO ATIVO) =====
-function addItem(){
-  if(!db.caixa.aberto) return alert("Abra o caixa");
-
-  const [nome,valor,tipo] = produto.value.split("|");
-  const cli = db.clientes.find(c=>c.nome===cliente.value);
-
-  // 🔒 BLOQUEIA SERVIÇO ERRADO
-  if(
-    cli &&
-    cli.plano &&
-    tipo==="servico" &&
-    !db.planos.find(p => p.nome===cli.plano && p.tipo===nome)
-  ){
-    return alert("❌ Serviço não faz parte do plano do cliente");
-  }
-
-  // ✔ USA PLANO
-  if(
-    cli &&
-    cli.plano &&
-    tipo==="servico" &&
-    cli.saldo>0 &&
-    db.planos.find(p => p.nome===cli.plano && p.tipo===nome)
-  ){
-    cli.saldo--;
-    alert("✅ Plano utilizado. Saldo: "+cli.saldo);
-    save(); render();
-    return;
-  }
-
-  carrinho.push({nome,valor:Number(valor)});
-  carrinhoRender();
-}
-
-// ===== CARRINHO =====
-function carrinhoRender(){
-  let html="<tr><th>Item</th><th>Valor</th></tr>";
-  let soma=0;
-  carrinho.forEach(i=>{
-    html+=`<tr><td>${i.nome}</td><td>R$ ${i.valor.toFixed(2)}</td></tr>`;
-    soma+=i.valor;
-  });
-  carrinho.innerHTML=html;
-  total.innerText=soma.toFixed(2);
-}
-
-function finalizarVenda(){
-  if(!carrinho.length) return;
-  const totalVenda=carrinho.reduce((s,i)=>s+i.valor,0);
-  db.vendas.push({
-    data:new Date().toLocaleString(),
-    cliente:cliente.value,
-    total:totalVenda
-  });
-  carrinho=[];
-  save(); render();
-}
-
-function abrirCaixa(){ db.caixa.aberto=true; save(); render(); }
-function fecharCaixa(){ db.caixa.aberto=false; save(); render(); }
-
-// ===== CADASTROS =====
+/* ===== CLIENTES ===== */
 function salvarCliente(){
-  const plano=db.planos.find(p=>p.nome===planoCliente.value);
-  db.clientes.push({
-    nome:nomeCliente.value,
-    plano:plano?plano.nome:null,
-    saldo:plano?plano.qtd:0
-  });
+  const obj={nome:nomeCliente.value,plano:planoCliente.value||null}
+  if(editCliente!==null) db.clientes[editCliente]=obj;
+  else db.clientes.push(obj);
+  editCliente=null; nomeCliente.value="";
   save(); render();
 }
+function editarCliente(i){
+  const c=db.clientes[i];
+  nomeCliente.value=c.nome; planoCliente.value=c.plano||"";
+  editCliente=i;
+}
+function excluirCliente(i){
+  if(confirm("Excluir cliente?")){
+    db.clientes.splice(i,1); save(); render();
+  }
+}
 
+/* ===== PLANOS ===== */
 function salvarPlano(){
-  db.planos.push({
+  const obj={
     nome:nomePlano.value,
-    valor:Number(valorPlano.value),
-    qtd:Number(qtdPlano.value),
+    valor:+valorPlano.value,
+    qtd:+qtdPlano.value,
     tipo:tipoPlano.value
-  });
+  };
+  if(editPlano!==null) db.planos[editPlano]=obj;
+  else db.planos.push(obj);
+  editPlano=null; nomePlano.value="";
   save(); render();
 }
+function editarPlano(i){
+  const p=db.planos[i];
+  nomePlano.value=p.nome; valorPlano.value=p.valor;
+  qtdPlano.value=p.qtd; tipoPlano.value=p.tipo;
+  editPlano=i;
+}
+function excluirPlano(i){
+  if(confirm("Excluir plano?")){
+    db.planos.splice(i,1); save(); render();
+  }
+}
 
+/* ===== PRODUTOS ===== */
 function salvarProduto(){
-  db.produtos.push({
+  const obj={
     nome:nomeProd.value,
-    valor:Number(valorProd.value),
+    valor:+valorProd.value,
     tipo:tipoProd.value
-  });
+  };
+  if(editProduto!==null) db.produtos[editProduto]=obj;
+  else db.produtos.push(obj);
+  editProduto=null; nomeProd.value="";
   save(); render();
 }
-
-function salvarDespesa(){
-  db.despesas.push({
-    desc:descDespesa.value,
-    valor:Number(valorDespesa.value)
-  });
-  save(); render();
+function editarProduto(i){
+  const p=db.produtos[i];
+  nomeProd.value=p.nome; valorProd.value=p.valor;
+  tipoProd.value=p.tipo;
+  editProduto=i;
 }
-
-// ===== AGENDA =====
-function renderAgenda(){
-  if(!dataAgenda.value) return;
-  listaAgenda.innerHTML = db.agenda
-    .filter(a=>a.data===dataAgenda.value)
-    .sort((a,b)=>a.hora.localeCompare(b.hora))
-    .map(a=>`<li>${a.hora} | ${a.cliente} | ${a.servico}</li>`)
-    .join("");
-}
-
-function salvarAgendamento(){
-  if(db.agenda.find(a=>a.data===dataAgenda.value && a.hora===horaAgenda.value))
-    return alert("Horário ocupado");
-  db.agenda.push({
-    data:dataAgenda.value,
-    hora:horaAgenda.value,
-    cliente:clienteAgenda.value,
-    servico:servicoAgenda.value
-  });
-  save(); renderAgenda();
-}
-
-// ===== FINANCEIRO =====
-function financeiroRender(){
-  const f=db.vendas.reduce((s,v)=>s+v.total,0);
-  const d=db.despesas.reduce((s,i)=>s+i.valor,0);
-  fat.innerText=f.toFixed(2);
-  desp.innerText=d.toFixed(2);
-  lucro.innerText=(f-d).toFixed(2);
+function excluirProduto(i){
+  if(confirm("Excluir item?")){
+    db.produtos.splice(i,1); save(); render();
+  }
 }
 
 render();
